// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Map Popup FloatingCarEntity smoke-test 1`] = `
<div class="styled__MapOverlayPopup-sc-1ua8l3w-1 caiJeC">
  <div id="focus-car_6861-popup-focus-trap"
       role="presentation"
  >
    <header class="styled__PopupTitle-sc-1ua8l3w-3 hPZfeZ">
      MILES Car: 0541
    </header>
    <p class="styled__PopupRow-sc-1ua8l3w-2 iGrpST">
      <strong>
        Plan a trip:
      </strong>
      <span class="styled__FromToPickerSpan-sc-1tbhfr7-1 fuTqOt">
        <span class="styled__LocationPickerSpan-sc-1tbhfr7-0 dCEPLS">
          <svg viewbox="0 0 512 512"
               height="0.9em"
               width="0.9em"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-sc-ea9ulj-0 ebjPRL styled__FromIcon-sc-can73f-0 dhCAOI"
          >
            <path fill="currentColor"
                  d="M160 256c0-53.9 42.1-96 96-96 53 0 96 42.1 96 96 0 53-43 96-96 96-53.9 0-96-43-96-96zm352 0c0 141.4-114.6 256-256 256S0 397.4 0 256 114.6 0 256 0s256 114.6 256 256zM256 48C141.1 48 48 141.1 48 256s93.1 208 208 208 208-93.1 208-208S370.9 48 256 48z"
            >
            </path>
          </svg>
          <button class="styled__Button-sc-1tbhfr7-2 fHVwrt">
            From here
          </button>
        </span>
        <span class="styled__LocationPickerSpan-sc-1tbhfr7-0 dCEPLS">
          <svg viewbox="0 0 384 512"
               height="0.9em"
               width="0.9em"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-sc-ea9ulj-0 ebjPRL styled__ToIcon-sc-can73f-2 hyDVZD"
          >
            <path fill="currentColor"
                  d="M215.7 499.2C267 435 384 279.4 384 192 384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2 12.3 15.3 35.1 15.3 47.4 0zM192 256c-35.3 0-64-28.7-64-64s28.7-64 64-64 64 28.7 64 64-28.7 64-64 64z"
            >
            </path>
          </svg>
          <button class="styled__Button-sc-1tbhfr7-2 fHVwrt">
            To here
          </button>
        </span>
      </span>
    </p>
  </div>
</div>
`;

exports[`Map Popup FloatingVehicleEntity smoke-test 1`] = `
<div class="styled__MapOverlayPopup-sc-1ua8l3w-1 caiJeC">
  <div id="focus-22bike_686122-popup-focus-trap"
       role="presentation"
  >
    <header class="styled__PopupTitle-sc-1ua8l3w-3 hPZfeZ">
      BIKETOWN Free-floating bike: 0541
    </header>
    <p class="styled__PopupRow-sc-1ua8l3w-2 iGrpST">
      <strong>
        Plan a trip:
      </strong>
      <span class="styled__FromToPickerSpan-sc-1tbhfr7-1 fuTqOt">
        <span class="styled__LocationPickerSpan-sc-1tbhfr7-0 dCEPLS">
          <svg viewbox="0 0 512 512"
               height="0.9em"
               width="0.9em"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-sc-ea9ulj-0 ebjPRL styled__FromIcon-sc-can73f-0 dhCAOI"
          >
            <path fill="currentColor"
                  d="M160 256c0-53.9 42.1-96 96-96 53 0 96 42.1 96 96 0 53-43 96-96 96-53.9 0-96-43-96-96zm352 0c0 141.4-114.6 256-256 256S0 397.4 0 256 114.6 0 256 0s256 114.6 256 256zM256 48C141.1 48 48 141.1 48 256s93.1 208 208 208 208-93.1 208-208S370.9 48 256 48z"
            >
            </path>
          </svg>
          <button class="styled__Button-sc-1tbhfr7-2 fHVwrt">
            From here
          </button>
        </span>
        <span class="styled__LocationPickerSpan-sc-1tbhfr7-0 dCEPLS">
          <svg viewbox="0 0 384 512"
               height="0.9em"
               width="0.9em"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-sc-ea9ulj-0 ebjPRL styled__ToIcon-sc-can73f-2 hyDVZD"
          >
            <path fill="currentColor"
                  d="M215.7 499.2C267 435 384 279.4 384 192 384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2 12.3 15.3 35.1 15.3 47.4 0zM192 256c-35.3 0-64-28.7-64-64s28.7-64 64-64 64 28.7 64 64-28.7 64-64 64z"
            >
            </path>
          </svg>
          <button class="styled__Button-sc-1tbhfr7-2 fHVwrt">
            To here
          </button>
        </span>
      </span>
    </p>
  </div>
</div>
`;

exports[`Map Popup StationEntity smoke-test 1`] = `
<div class="styled__MapOverlayPopup-sc-1ua8l3w-1 caiJeC">
  <div id="focus-22hub_158022-popup-focus-trap"
       role="presentation"
  >
    <header class="styled__PopupTitle-sc-1ua8l3w-3 hPZfeZ">
      BIKETOWN SW Morrison at 18th
    </header>
    <p class="styled__PopupRow-sc-1ua8l3w-2 iGrpST">
      <div>
        Available bikes: 6
      </div>
      <div>
        Available docks: 11
      </div>
    </p>
    <p class="styled__PopupRow-sc-1ua8l3w-2 iGrpST">
      <strong>
        Plan a trip:
      </strong>
      <span class="styled__FromToPickerSpan-sc-1tbhfr7-1 fuTqOt">
        <span class="styled__LocationPickerSpan-sc-1tbhfr7-0 dCEPLS">
          <svg viewbox="0 0 512 512"
               height="0.9em"
               width="0.9em"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-sc-ea9ulj-0 ebjPRL styled__FromIcon-sc-can73f-0 dhCAOI"
          >
            <path fill="currentColor"
                  d="M160 256c0-53.9 42.1-96 96-96 53 0 96 42.1 96 96 0 53-43 96-96 96-53.9 0-96-43-96-96zm352 0c0 141.4-114.6 256-256 256S0 397.4 0 256 114.6 0 256 0s256 114.6 256 256zM256 48C141.1 48 48 141.1 48 256s93.1 208 208 208 208-93.1 208-208S370.9 48 256 48z"
            >
            </path>
          </svg>
          <button class="styled__Button-sc-1tbhfr7-2 fHVwrt">
            From here
          </button>
        </span>
        <span class="styled__LocationPickerSpan-sc-1tbhfr7-0 dCEPLS">
          <svg viewbox="0 0 384 512"
               height="0.9em"
               width="0.9em"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-sc-ea9ulj-0 ebjPRL styled__ToIcon-sc-can73f-2 hyDVZD"
          >
            <path fill="currentColor"
                  d="M215.7 499.2C267 435 384 279.4 384 192 384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2 12.3 15.3 35.1 15.3 47.4 0zM192 256c-35.3 0-64-28.7-64-64s28.7-64 64-64 64 28.7 64 64-28.7 64-64 64z"
            >
            </path>
          </svg>
          <button class="styled__Button-sc-1tbhfr7-2 fHVwrt">
            To here
          </button>
        </span>
      </span>
    </p>
  </div>
</div>
`;

exports[`Map Popup StopEntity smoke-test 1`] = `
<div class="styled__MapOverlayPopup-sc-1ua8l3w-1 caiJeC">
  <div id="focus-9526-popup-focus-trap"
       role="presentation"
  >
    <header class="styled__PopupTitle-sc-1ua8l3w-3 hPZfeZ">
      W Burnside &amp; SW 2nd
    </header>
    <p class="styled__PopupRow-sc-1ua8l3w-2 iGrpST">
      <strong>
        Stop ID: 9526
      </strong>
      <button class="styled__ViewStopButton-sc-12v7ov3-0 hXaHvR">
        Stop Viewer
      </button>
    </p>
    <p class="styled__PopupRow-sc-1ua8l3w-2 iGrpST">
      <strong>
        Plan a trip:
      </strong>
      <span class="styled__FromToPickerSpan-sc-1tbhfr7-1 fuTqOt">
        <span class="styled__LocationPickerSpan-sc-1tbhfr7-0 dCEPLS">
          <svg viewbox="0 0 512 512"
               height="0.9em"
               width="0.9em"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-sc-ea9ulj-0 ebjPRL styled__FromIcon-sc-can73f-0 dhCAOI"
          >
            <path fill="currentColor"
                  d="M160 256c0-53.9 42.1-96 96-96 53 0 96 42.1 96 96 0 53-43 96-96 96-53.9 0-96-43-96-96zm352 0c0 141.4-114.6 256-256 256S0 397.4 0 256 114.6 0 256 0s256 114.6 256 256zM256 48C141.1 48 48 141.1 48 256s93.1 208 208 208 208-93.1 208-208S370.9 48 256 48z"
            >
            </path>
          </svg>
          <button class="styled__Button-sc-1tbhfr7-2 fHVwrt">
            From here
          </button>
        </span>
        <span class="styled__LocationPickerSpan-sc-1tbhfr7-0 dCEPLS">
          <svg viewbox="0 0 384 512"
               height="0.9em"
               width="0.9em"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-sc-ea9ulj-0 ebjPRL styled__ToIcon-sc-can73f-2 hyDVZD"
          >
            <path fill="currentColor"
                  d="M215.7 499.2C267 435 384 279.4 384 192 384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2 12.3 15.3 35.1 15.3 47.4 0zM192 256c-35.3 0-64-28.7-64-64s28.7-64 64-64 64 28.7 64 64-28.7 64-64 64z"
            >
            </path>
          </svg>
          <button class="styled__Button-sc-1tbhfr7-2 fHVwrt">
            To here
          </button>
        </span>
      </span>
    </p>
  </div>
</div>
`;

exports[`Map Popup StopEntityNoHandlers smoke-test 1`] = `
<div class="styled__MapOverlayPopup-sc-1ua8l3w-1 caiJeC">
  <div id="focus-9526-popup-focus-trap"
       role="presentation"
  >
    <header class="styled__PopupTitle-sc-1ua8l3w-3 hPZfeZ">
      W Burnside &amp; SW 2nd
    </header>
  </div>
</div>
`;

exports[`Map Popup StopEntityNoStopCode smoke-test 1`] = `
<div class="styled__MapOverlayPopup-sc-1ua8l3w-1 caiJeC">
  <div id="focus-9526-popup-focus-trap"
       role="presentation"
  >
    <header class="styled__PopupTitle-sc-1ua8l3w-3 hPZfeZ">
      W Burnside &amp; SW 2nd
    </header>
    <p class="styled__PopupRow-sc-1ua8l3w-2 iGrpST">
      <button class="styled__ViewStopButton-sc-12v7ov3-0 bbtcwi">
        Stop Viewer
      </button>
    </p>
    <p class="styled__PopupRow-sc-1ua8l3w-2 iGrpST">
      <strong>
        Plan a trip:
      </strong>
      <span class="styled__FromToPickerSpan-sc-1tbhfr7-1 fuTqOt">
        <span class="styled__LocationPickerSpan-sc-1tbhfr7-0 dCEPLS">
          <svg viewbox="0 0 512 512"
               height="0.9em"
               width="0.9em"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-sc-ea9ulj-0 ebjPRL styled__FromIcon-sc-can73f-0 dhCAOI"
          >
            <path fill="currentColor"
                  d="M160 256c0-53.9 42.1-96 96-96 53 0 96 42.1 96 96 0 53-43 96-96 96-53.9 0-96-43-96-96zm352 0c0 141.4-114.6 256-256 256S0 397.4 0 256 114.6 0 256 0s256 114.6 256 256zM256 48C141.1 48 48 141.1 48 256s93.1 208 208 208 208-93.1 208-208S370.9 48 256 48z"
            >
            </path>
          </svg>
          <button class="styled__Button-sc-1tbhfr7-2 fHVwrt">
            From here
          </button>
        </span>
        <span class="styled__LocationPickerSpan-sc-1tbhfr7-0 dCEPLS">
          <svg viewbox="0 0 384 512"
               height="0.9em"
               width="0.9em"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-sc-ea9ulj-0 ebjPRL styled__ToIcon-sc-can73f-2 hyDVZD"
          >
            <path fill="currentColor"
                  d="M215.7 499.2C267 435 384 279.4 384 192 384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2 12.3 15.3 35.1 15.3 47.4 0zM192 256c-35.3 0-64-28.7-64-64s28.7-64 64-64 64 28.7 64 64-28.7 64-64 64z"
            >
            </path>
          </svg>
          <button class="styled__Button-sc-1tbhfr7-2 fHVwrt">
            To here
          </button>
        </span>
      </span>
    </p>
  </div>
</div>
`;

exports[`Map Popup StopEntityWithEntityPrefix smoke-test 1`] = `
<div class="styled__MapOverlayPopup-sc-1ua8l3w-1 caiJeC">
  <div id="focus-9526-popup-focus-trap"
       role="presentation"
  >
    <header class="styled__PopupTitle-sc-1ua8l3w-3 hPZfeZ">
      <span class="MapPopupstory__DemoIcon-sc-vlk9f0-0 hzuFzw">
        W
      </span>
      W Burnside &amp; SW 2nd
    </header>
    <p class="styled__PopupRow-sc-1ua8l3w-2 iGrpST">
      <strong>
        Stop ID: 9526
      </strong>
      <button class="styled__ViewStopButton-sc-12v7ov3-0 hXaHvR">
        Stop Viewer
      </button>
    </p>
    <p class="styled__PopupRow-sc-1ua8l3w-2 iGrpST">
      <strong>
        Plan a trip:
      </strong>
      <span class="styled__FromToPickerSpan-sc-1tbhfr7-1 fuTqOt">
        <span class="styled__LocationPickerSpan-sc-1tbhfr7-0 dCEPLS">
          <svg viewbox="0 0 512 512"
               height="0.9em"
               width="0.9em"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-sc-ea9ulj-0 ebjPRL styled__FromIcon-sc-can73f-0 dhCAOI"
          >
            <path fill="currentColor"
                  d="M160 256c0-53.9 42.1-96 96-96 53 0 96 42.1 96 96 0 53-43 96-96 96-53.9 0-96-43-96-96zm352 0c0 141.4-114.6 256-256 256S0 397.4 0 256 114.6 0 256 0s256 114.6 256 256zM256 48C141.1 48 48 141.1 48 256s93.1 208 208 208 208-93.1 208-208S370.9 48 256 48z"
            >
            </path>
          </svg>
          <button class="styled__Button-sc-1tbhfr7-2 fHVwrt">
            From here
          </button>
        </span>
        <span class="styled__LocationPickerSpan-sc-1tbhfr7-0 dCEPLS">
          <svg viewbox="0 0 384 512"
               height="0.9em"
               width="0.9em"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-sc-ea9ulj-0 ebjPRL styled__ToIcon-sc-can73f-2 hyDVZD"
          >
            <path fill="currentColor"
                  d="M215.7 499.2C267 435 384 279.4 384 192 384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2 12.3 15.3 35.1 15.3 47.4 0zM192 256c-35.3 0-64-28.7-64-64s28.7-64 64-64 64 28.7 64 64-28.7 64-64 64z"
            >
            </path>
          </svg>
          <button class="styled__Button-sc-1tbhfr7-2 fHVwrt">
            To here
          </button>
        </span>
      </span>
    </p>
  </div>
</div>
`;

exports[`Map Popup StopEntityWithFeedName smoke-test 1`] = `
<div class="styled__MapOverlayPopup-sc-1ua8l3w-1 caiJeC">
  <div id="focus-trimet3A9526-popup-focus-trap"
       role="presentation"
  >
    <header class="styled__PopupTitle-sc-1ua8l3w-3 hPZfeZ">
      W Burnside &amp; SW 2nd
    </header>
    <p class="styled__PopupRow-sc-1ua8l3w-2 iGrpST">
      <strong>
        Stop ID: TriMet 9526
      </strong>
      <button class="styled__ViewStopButton-sc-12v7ov3-0 hXaHvR">
        Stop Viewer
      </button>
    </p>
    <p class="styled__PopupRow-sc-1ua8l3w-2 iGrpST">
      <strong>
        Plan a trip:
      </strong>
      <span class="styled__FromToPickerSpan-sc-1tbhfr7-1 fuTqOt">
        <span class="styled__LocationPickerSpan-sc-1tbhfr7-0 dCEPLS">
          <svg viewbox="0 0 512 512"
               height="0.9em"
               width="0.9em"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-sc-ea9ulj-0 ebjPRL styled__FromIcon-sc-can73f-0 dhCAOI"
          >
            <path fill="currentColor"
                  d="M160 256c0-53.9 42.1-96 96-96 53 0 96 42.1 96 96 0 53-43 96-96 96-53.9 0-96-43-96-96zm352 0c0 141.4-114.6 256-256 256S0 397.4 0 256 114.6 0 256 0s256 114.6 256 256zM256 48C141.1 48 48 141.1 48 256s93.1 208 208 208 208-93.1 208-208S370.9 48 256 48z"
            >
            </path>
          </svg>
          <button class="styled__Button-sc-1tbhfr7-2 fHVwrt">
            From here
          </button>
        </span>
        <span class="styled__LocationPickerSpan-sc-1tbhfr7-0 dCEPLS">
          <svg viewbox="0 0 384 512"
               height="0.9em"
               width="0.9em"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-sc-ea9ulj-0 ebjPRL styled__ToIcon-sc-can73f-2 hyDVZD"
          >
            <path fill="currentColor"
                  d="M215.7 499.2C267 435 384 279.4 384 192 384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2 12.3 15.3 35.1 15.3 47.4 0zM192 256c-35.3 0-64-28.7-64-64s28.7-64 64-64 64 28.7 64 64-28.7 64-64 64z"
            >
            </path>
          </svg>
          <button class="styled__Button-sc-1tbhfr7-2 fHVwrt">
            To here
          </button>
        </span>
      </span>
    </p>
  </div>
</div>
`;
